fix: overflow for saved palettes #9

--- a/components/saved-palette/saved-palettes.scss
+++ b/components/saved-palette/saved-palettes.scss
@@ -1,5 +1,5 @@
 .saved-palettes {
-  height: 90%;
+  height: 90vh;
   width: 100%;
   overflow: auto;
 
